# better-Cal

./: .gitignore  CMakeLists.txt  README.md
src/: calendar.cpp  calendar.h  dateUtils.cpp  dateUtils.h  main.cpp  option.cpp  option.h
test/: test_cal.cpp
